--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "java.dependency.packagePresentation": "hierarchical",
-  "java.project.explorer.showNonJavaResources": true
+  "java.project.explorer.showNonJavaResources": true,
+  "files.insertFinalNewline": true
 }
