--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "java.dependency.packagePresentation": "hierarchical",
   "java.project.explorer.showNonJavaResources": true,
-  "files.insertFinalNewline": true
+"files.insertFinalNewline": true,
+"java.debug.settings.onBuildFailureProceed": true
 }
