--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,223 @@
 {
+  "redhat.telemetry.enabled": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": "explicit"
+  },
+  "editor.linkedEditing": true,
+  "editor.minimap.enabled": false,
+  "editor.rulers": [
+    {
+      "column": 80,
+      "color": "#00FF0010"
+    },
+    {
+      "column": 100,
+      "color": "#BDB76B15"
+    },
+    {
+      "column": 120,
+      "color": "#FA807219"
+    }
+  ],
+  "editor.unicodeHighlight.includeComments": true,
+  "emmet.variables": {
+    "lang": "en"
+  },
+  "workbench.colorCustomizations": {},
+  "workbench.editor.revealIfOpen": true,
+  "workbench.tree.indent": 20,
+  "files.eol": "\n",
+  "[bat]": {
+    "files.eol": "\r\n"
+  },
+  "cSpell.diagnosticLevel": "Hint",
+  "trailing-spaces.backgroundColor": "rgba(255,0,0,0.1)",
+  "trailing-spaces.includeEmptyLines": false,
+  "terminal.integrated.tabs.hideCondition": "never",
+  "terminal.integrated.enablePersistentSessions": false,
+  "java.debug.settings.hotCodeReplace": "auto",
+  "java.sources.organizeImports.staticStarThreshold": 1,
+  "java.configuration.detectJdksAtStart": false,
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "terminal.integrated.profiles.windows": {
+    "JavaSE-1.8 LTS": {
+      "overrideName": true,
+      "env": {
+        "PATH": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\8\\bin;${env:PATH}",
+        "JAVA_HOME": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\8"
+      },
+      "path": "cmd"
+    },
+    "JavaSE-11 LTS": {
+      "overrideName": true,
+      "env": {
+        "PATH": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\11\\bin;${env:PATH}",
+        "JAVA_HOME": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\11"
+      },
+      "path": "cmd"
+    },
+    "JavaSE-17 LTS": {
+      "overrideName": true,
+      "env": {
+        "PATH": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\17\\bin;${env:PATH}",
+        "JAVA_HOME": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\17"
+      },
+      "path": "cmd"
+    },
+    "JavaSE-21 LTS": {
+      "overrideName": true,
+      "env": {
+        "PATH": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\21\\bin;${env:PATH}",
+        "JAVA_TOOL_OPTIONS": "-Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8",
+        "JAVA_HOME": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\21"
+      },
+      "path": "cmd",
+      "args": ["/k", "chcp", "65001"]
+    }
+  },
+  "terminal.integrated.automationProfile.windows": {
+    "path": "cmd"
+  },
+  "java.test.config": {
+    "vmArgs": ["-Dstdout.encoding=UTF-8", "-Dstderr.encoding=UTF-8"]
+  },
+  "terminal.integrated.defaultProfile.windows": "JavaSE-21 LTS",
+  "terminal.integrated.env.windows": {
+    "JAVA_HOME": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\21",
+    "PATH": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\21\\bin;${env:PATH}"
+  },
+  "maven.terminal.customEnv": [
+    {
+      "environmentVariable": "JAVA_HOME",
+      "value": "C:\\Users\\aicheye\\AppData\\Roaming\\Code\\User\\globalStorage\\pleiades.java-extension-pack-jdk\\java\\21"
+    }
+  ],
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "editor.formatOnSave": true,
+  "prettier.singleQuote": false,
+  "prettier.semi": true,
+  "java.edit.smartSemicolonDetection.enabled": true,
+  "javascript.format.semicolons": "insert",
+  "editor.formatOnPaste": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.indentSize": "tabSize",
+  "editor.detectIndentation": false,
+  "git.autofetch": true,
+  "editor.tokenColorCustomizations": {
+    "[*Light*]": {
+      "textMateRules": [
+        {
+          "scope": "ref.matchtext",
+          "settings": {
+            "foreground": "#000"
+          }
+        }
+      ]
+    },
+    "[*Dark*]": {
+      "textMateRules": [
+        {
+          "scope": "ref.matchtext",
+          "settings": {
+            "foreground": "#fff"
+          }
+        }
+      ]
+    }
+  },
+  "vscode-color-picker.languages": ["python", "javascript", "typescript", "jsx", "tsx", "html", "css", "scss", "less", "json", "yaml", "markdown", "java", "c", "cpp", "csharp", "go", "php", "ruby", "rust", "shellscript", "swift", "kotlin", "dart", "r", "powershell", "plaintext"],
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "git.confirmSync": false,
+  "reactSnippets.settings.prettierEnabled": true,
+  "reactSnippets.settings.importReactOnTop": false,
+  "characterConversion.notless": "≥",
+  "characterConversion.rules": [],
+  "characterConversion.notmore": "≤",
+  "characterConversion.equal": "==",
+  "characterConversion.notequal": "!=",
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.colorDecoratorsActivatedOn": "click",
+  "explorer.decorations.colors": false,
   "java.dependency.packagePresentation": "hierarchical",
-  "java.project.explorer.showNonJavaResources": true,
-"files.insertFinalNewline": true,
-"java.debug.settings.onBuildFailureProceed": true
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.maxConcurrentBuilds": 16,
+  "terminal.integrated.profiles.linux": {
+    "bash": {
+      "path": "bash",
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/21"
+      },
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    },
+    "JavaSE-1.8 LTS": {
+      "overrideName": true,
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/8"
+      },
+      "path": "bash",
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    },
+    "JavaSE-11 LTS": {
+      "overrideName": true,
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/11"
+      },
+      "path": "bash",
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    },
+    "JavaSE-17 LTS": {
+      "overrideName": true,
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/17"
+      },
+      "path": "bash",
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    },
+    "JavaSE-21 LTS": {
+      "overrideName": true,
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/21"
+      },
+      "path": "bash",
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    },
+    "JavaSE-23": {
+      "overrideName": true,
+      "env": {
+        "JAVA_HOME": "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/java/latest"
+      },
+      "path": "bash",
+      "args": ["--rcfile", "/home/aicheye/.config/Code/User/globalStorage/pleiades.java-extension-pack-jdk/.bashrc"]
+    }
+  },
+  "terminal.integrated.defaultProfile.linux": "JavaSE-23",
+  "window.autoDetectColorScheme": true,
+  "catppuccin.accentColor": "blue",
+  "cSpell.language": "en-CA",
+  "workbench.sideBar.location": "right",
+  "cmake.showOptionsMovedNotification": false,
+  "explorer.confirmDragAndDrop": false,
+  "git.enableSmartCommit": true,
+  "github.copilot.editor.enableAutoCompletions": false,
+  "window.menuBarVisibility": "toggle",
+  "[java]": {
+    "editor.defaultFormatter": "redhat.java"
+  },
+  "prettier.printWidth": 1000,
+  "workbench.startupEditor": "none",
+  "explorer.confirmDelete": false,
+  "files.insertFinalNewline": true,
+  "cph.general.defaultLanguage": "cpp",
+  "cph.general.defaultLanguageTemplateFileLocation": "/home/aicheye/Code/Cpp-Solutions/template.cpp",
+  "terminal.integrated.enableMultiLinePasteWarning": "never",
+  "debug.onTaskErrors": "showErrors",
+  "explorer.confirmPasteNative": false,
+  "window.commandCenter": true,
+  "workbench.preferredDarkColorTheme": "Default Dark Modern",
+  "workbench.preferredLightColorTheme": "Adwaita Light",
+  "editor.renderLineHighlight": "none",
+  "workbench.iconTheme": null
 }
