Refactor: Update launch and settings configurations; remove TowerOfHanoi and LabTester classes; add Payroll and Employee classes; implement payroll management features and file handling; enhance computer management in Lab class; restore GenerateString functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -220,6 +220,14 @@
   "editor.renderLineHighlight": "none",
   "workbench.iconTheme": null,
   "java.debug.settings.onBuildFailureProceed": true,
-  "java.project.sourcePaths": ["src", "homework/HW_06_Recursion", "homework/HW_03_InsertionSort", "homework/HW_02_BinarySearch", "homework/Gr11Review/HW_01_Gr11Review", "example/fraction"],
+  "java.project.sourcePaths": [
+    "homework/HW_06_Recursion",
+    "homework/HW_03_InsertionSort",
+    "homework/HW_02_BinarySearch",
+    "homework/Gr11Review/HW_01_Gr11Review",
+    "example/fraction",
+    "example/computer",
+    "example/payroll"
+],
   "java.project.referencedLibraries": []
 }
