Refactor: Update Payroll class file handling; ensure proper line breaks in output and enhance user prompts in PayrollRunner

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -227,7 +227,8 @@
     "homework/Gr11Review/HW_01_Gr11Review",
     "example/fraction",
     "example/computer",
-    "example/payroll"
+    "example/payroll",
+    "example"
 ],
   "java.project.referencedLibraries": []
 }
