--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -228,7 +228,8 @@
     "example/fraction",
     "example/computer",
     "example/payroll",
-    "example"
+    "example",
+    "property"
 ],
   "java.project.referencedLibraries": []
 }
