Refactor: Update property management system; rename PropertyDatabse to PropertyDatabase, enhance Realty class functionality, and improve data file structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -229,7 +229,8 @@
     "example/computer",
     "example/payroll",
     "example",
-    "property"
+    "property",
+    "example\\payroll"
 ],
   "java.project.referencedLibraries": []
 }
